# codestrux

./: README.md  build_log.txt  index.html  package-lock.json  package.json
src/: App.tsx  ModelSearch.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  chat_storage.rs  hardware.rs  lib.rs  local_chat.rs  model_storage.rs  store.rs
src-tauri/src/chat/: commands.rs  server.rs  state.rs
src-tauri/src/download/: client.rs  commands.rs  mod.rs  transfer.rs  types.rs  validate.rs
src-tauri/src/hardware/: cpu.rs  gpu.rs  memory.rs  mod.rs  types.rs
src-tauri/src/rag/: chunking.rs  commands.rs  embedding.rs  mod.rs  retrieval.rs  vector_storage.rs
src/components/chat/: ChatArea.tsx  CodeBlock.tsx  FileAttachment.tsx  InputBar.tsx  Message.tsx  MessageList.tsx  index.ts
src/components/hardware/: HardwarePanel.tsx  useHardware.ts
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/layout/header/: Header.tsx  ModelSearch.tsx  WindowControls.tsx
src/components/layout/header/model-search/: FileListPanel.tsx  SearchBar.tsx  SearchResultsDropdown.tsx
src/components/settings/: ActiveModelSection.tsx  BackendBadge.tsx  CreativitySection.tsx  DownloadProgressSection.tsx  ModelListSection.tsx  SettingsPanel.tsx  useLocalModel.ts
src/components/ui/: SectionHead.tsx
src/constants/: PrismAliases.ts  PrismTheme.ts  index.ts
src/lib/: Chat.ts  ModalCombatability.ts  PrismLanguages.ts
src/types/: index.ts
