[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "codestrux"
version = "1.3.2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "codestrux_lib"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
wgpu = { version = "29.0.1", features = [] }

rusqlite = { version = "0.39.0", features = ["bundled"] }

# Parallel chunked model file downloads from HuggingFace Hub.
# http2 is intentionally absent — the download client forces HTTP/1.1
# so each chunk gets its own TCP connection rather than being multiplexed.
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls",
  "stream",
  "json",
] }
# bytes: zero-copy frame passing between async network receiver and
# blocking disk writer via per-chunk mpsc channels.
bytes = "1.11.1"
futures-util = "0.3.32"
tokio = { version = "1.51.1", features = [
  "sync",
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "rt",
  "time",
  "process",
  "parking_lot",
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
